@@ -1,37 +1,36 @@
 My-Translate4J
 ==============
 
-My-Translate4J 是一个基于JavaFX 的 Windows 桌面客户端翻译软件，但目前还处于开发优化阶段，适合有相关知识的开发者。默认已集成baidu翻译、ChatGPT、MyMemory、blip-image-captioning-base 和 opus-mt-en-zh。
+My-Translate4J 是Windows桌面客户端翻译软件。目前还在持续开发和优化阶段。
 
+## 运行
+运行根路径下的 [run.bat](run.bat)
 
-该软件还支持插件/扩展功能，基于 SPI 实现。插件 SDK 和插件 demo 可在以下链接中找到：
+![My-Translate4J GUI](src/main/resources/img/gui.png)
+
+## 使用
+快捷键 Alt+S 进行截图翻译，Alt+Z 对鼠标选中的文本进行翻译。请注意检查是否有快捷键冲突。
+
+## 扩展
+目前支持插件/扩展功能，基于 SPI 实现。扩展 SDK 和扩展 demo 可在以下链接中找到：
 
 *   插件 SDK：[https://github.com/youdontknow-hash/my-translate4J-plugin-api](https://github.com/youdontknow-hash/my-translate4J-plugin-api)
 *   插件 demo：[https://github.com/youdontknow-hash/my-translate4J-plugin-api-demo](https://github.com/youdontknow-hash/my-translate4J-plugin-api-demo)
-
-OCR 识图功能基于 Tess4J 项目，目前英文识别效果较好，但中文识别率不太高。需要下载相关模型后放入 tessdata 文件夹中。
-
-使用快捷键 Alt+S 进行截图翻译，Alt+Z 对选中的文本进行翻译。请注意检查是否有快捷键冲突。
 
 试验性功能
 -----
 
 ### 图片字幕翻译/Image Captioning
 ![My-Translate4J GUI](src/main/resources/img/image_captioning.png)
-![My-Translate4J GUI](src/main/resources/img/gui.png)
 
 如何开始
 ----
-
-### 安装 JavaFX
-
-由于新版本的 JDK 已经剥离了 JavaFX 相关的库，您需要手动下载并导入到项目中。运行时请添加以下 VM 选项：
-
-
-```css
---module-path javafx_path/lib --add-modules javafx.controls,javafx.fxml
+### 安装百度PaddleOCR和PaddlePaddle
+```pycon
+pip install paddleocr
+pip install paddlepaddle
 ```
-
+## 以下为可选
 ### Helsinki-NLP/opus-mt-en-zh 模型
 
 从以下链接下载所有文件并放入项目根目录下的 `opus-mt-en-zh-local` 文件夹中：
@@ -56,9 +55,6 @@ OCR 识图功能基于 Tess4J 项目，目前英文识别效果较好，但中�
 
 [https://platform.openai.com/account/api-keys](https://platform.openai.com/account/api-keys)
 
-### OCR 识图模型
-
-从 Tesseract 官网下载相关模型，并放入项目的 `tessdata` 文件夹中。
 
 贡献
 --
